--- a/netflix.html
+++ b/netflix.html
@@ -28,5 +28,18 @@
         </ul>
     </aside>
    </nav>
+   <div class="content">
+    <h1>Laughter. Tears. Thrills. Find it all on Netflix.</h1>
+    <br>
+    <p>Endless entertainment starts at just ₹149. Cancel anytime.</p></div><br>
+
+      <p>Ready to watch? Enter your email to create or restart your membership.</p> <br>
+     <form class="form2">
+        <input type="text" placeholder="email address">
+        <button class="started">Get Started</button>
+     </form>
+
+ </div>
+   
 </body>
 </html>
